--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
 name:               "Insight Lane"
 description:        "Open source platform for analyzing risk on road networks"
 
+baseurl: "/blog"
+production_url : https://insight-lane.github.io.com/blog
+BASE_PATH : http://insight-lane.com/blog
+
 url:                ""
 author:             "bpben"
 email:              "info@insightlane.org"
